--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -8,7 +8,7 @@
         <div class="control-label col-md-1">
           <%= f.label :title %>
         </div>
-        <div class="col-md-11">
+        <div class="col-md-8">
           <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
         </div>
       </div>
@@ -17,13 +17,13 @@
         <div class="control-label col-md-1">
           <%= f.label :body %>
         </div>
-        <div class="col-md-11">
-          <%= f.text_area :body, rows: 10, class: "form-horizontal", placeholder: "Body of article" %>
+        <div class="col-md-8">
+          <%= f.text_area :body, rows: 10, class: "form-control", placeholder: "Body of article" %>
         </div>
       </div>
       
       <div class="form-group">
-        <div class="col-md-offset-1 col-md-11">
+        <div class="col-md-offset-1 col-md-8">
           <%= f.submit class: "btn btn-primary btn-large pull-right" %>
         </div>
       </div>
