Add flash.now to article create failure path

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -13,7 +13,7 @@
           </h2>
           <div class="panel-body">
             <ul>
-             <%= @article.errors.full_messages.each do |msg| %>
+             <% @article.errors.full_messages.each do |msg| %>
                <li>
                  <%= msg %>
                </li>
