setup user sign in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,6 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  
   <body>
     <header role="banner">
       <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -24,8 +23,16 @@
           <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
               <li class="active"><%= link_to "Authors", "#" %></li>
-              <li><%= link_to "Sign up", new_user_registration_path %></li>
-              <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+              <% unless user_signed_in? %>
+                <li><%= link_to "Sign up", new_user_registration_path %></li>
+                <li><%= link_to "Sign in", new_user_session_path %></li>
+              <% end %>
+                <% if user_signed_in? %>
+                  <p class="navbar-text">
+                    Signed in as <%= "#{current_user.email}" %>
+                  </p>
+                <% end %>
+              <li><%= link_to "Signout", destroy_user_session_path, method: :delete %></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
