--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,6 @@
-<%= link_to "New Article", new_article_path, class: "btn btn-default btn-lg", id: "new-article-btn" %>
+<% if user_signed_in? %>
+  <%= link_to "New Article", new_article_path, class: "btn btn-default btn-lg", id: "new-article-btn" %>
+<% end %>
 
 <% if @articles.empty? %>
   <h1 id="no-articles">No Articles Created</h1>
@@ -12,7 +14,7 @@
         <%= truncate(article.body, length: 500) %>
       </div>
       <div class="author">
-        <small>Created by: <%= article.user.email %></small>
+       <small>Created by: <%= article.user.email %></small>      
       </div>
     </div>
   <% end %>
